# ESSDS

./: CMakeLists.txt  README.md
demo/: edge_demo.cpp  main.cpp  sp_demo.cpp  ta_demo.cpp  vehicle_demo.cpp
lib/: edge.cpp  edge.hpp  globalparameters.hpp  ps_crypto.cpp  ps_crypto.hpp  socketmanager.hpp  sp.cpp  sp.hpp  ta.cpp  ta.hpp  vehicle.cpp  vehicle.hpp
